# smart_notes_assistant

./: .gitignore  README.md  pyproject.toml  sample.txt
docker/: Dockerfile
rag/conda-meta/: history  libffi-3.4.4-hca03da5_1.json  ncurses-6.5-hee39554_0.json  openssl-1.1.1w-h1a28f6b_0.json  python-3.10.0-hbdb9e5c_5.json  readline-8.3-h0b18652_0.json  sqlite-3.51.1-hab6afd1_0.json  tk-8.6.15-hcd8a7d5_0.json  wheel-0.45.1-py310hca03da5_0.json  xz-5.6.4-h80987f9_1.json  zlib-1.3.1-h5f15de7_0.json
rag/etc/: aau_token
rag/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
rag/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
rag/share/terminfo/64/: ddr  dec-vt220
rag/share/terminfo/65/: emu-220
rag/share/terminfo/67/: go140  go140w  go225
rag/share/terminfo/68/: hazel  hp2392  hp2641a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
rag/share/terminfo/69/: ims-ansi
rag/share/terminfo/6b/: kt7
rag/share/terminfo/6d/: mai  mt4520-rv
rag/share/terminfo/6e/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  (+12 more)
smart_notes/api/: app.py
smart_notes/core/: interfaces.py  pipeline.py  types.py
smart_notes/embeddings/: embedding_model.py
smart_notes/evaluation/: evaluator.py  metrics.py
smart_notes/ingestion/: document_loader.py  factory.py  pdf_loader.py
smart_notes/llm/: generator.py
smart_notes/preprocessing/: chunking.py
smart_notes/retrieval/: retriever.py
smart_notes/vectorstore/: faiss_store.py
(+93 files in other folders)
