[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-notes-assistant"
version = "0.1.0"
description = "Production-grade RAG-based smart notes assistant"
authors = [{ name = "Dhruv Chirania" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
